@@ -139,7 +139,7 @@ namespace scene
 
 		//! Return the mesh for the given node. If it has no mesh or shouldn't export it's mesh 
 		//! you can return 0 in which case only the transformation matrix of the node will be used.
-		// Note: Function is not const because there is no const getMesh() function.
+		// TODO: Function is not const because there is no const getMesh() function for several Irrlicht nodes.
 		virtual IMesh* getMesh(irr::scene::ISceneNode * node) = 0;
 
 		//! Return if the node has it's own material overwriting the mesh-materials
@@ -358,6 +358,12 @@ namespace scene
 		//! Restrict the characters of oldString a set of allowed characters in xs::NCName and add the prefix.
 		/** A tool function to help when using a custom name generator to generative valid names for collada names and id's. */
 		virtual irr::core::stringw toNCName(const irr::core::stringw& oldString, const irr::core::stringw& prefix=irr::core::stringw(L"_NC_")) const = 0;
+
+		//! After export you can find out which name had been used for writing the geometry for this node.
+		/** The name comes from IColladaMeshWriterNames::nameForMesh, but you can't access the node there. 
+		\return Either a pointer to the name or NULL	*/
+		// TODO: Function is not const because there is no const getMesh() function for several Irrlicht nodes.
+		virtual const irr::core::stringw* findGeometryNameForNode(ISceneNode* node) = 0;
 
 
 	protected:
